# one-page-liv-planning

./: .dockerignore  .env.example  .gitignore  Dockerfile  LIV REST API.paw  README.md  cookies.txt  customers.html  customers.js  debug_drive.py  endpoints.md  generate-self-signed-cert.sh  generate_google_token.py  index-test.html  index.html  install.sh  livharleystreethospital-google-drive-client_secret.json  login.html  login.js  patient-test.html  patient-test.js  patient.html  patient.js  plan.md  pyproject.toml  requirements.txt  script.js  settings.html  settings.js  styles.css  test.css  test_google_drive.py
backend/: app.py  auth.py  chatbot.py  database.py  google_auth.py  google_routes.py  models.py  realtime.py  routes.py  settings.py  timezone.py  version.py
backend/migrations/: separate_procedures.py
frontend/css/: styles.css  test.css
frontend/html/: chatbot.html  customers.html  dashboard.html  index-test.html  index.html  login.html  merge-patients.html  patient-view.html  patient.html  settings.html  test-drive.html
frontend/js/: chatbot.js  customers.js  dashboard.js  login.js  merge-patients.js  nav-connection.js  nav-search.js  patient-route.js  patient.js  realtime.js  script.js  session.js  settings.js  timezone.js
n8n/: database.json  excel.json  mails.json  main.json  upload.json
scripts/: stress_test.py
tests/: patient_workflow_test.py  test_patients.py  test_procedures.py
