[project]
name = "one-page-liv-planning"
version = "0.1.0"
description = "LIV Planning FastAPI backend"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "passlib[bcrypt]",
    "itsdangerous",
    "bcrypt",
    "python-multipart",
]

[tool.uv]
# optional, helps keep virtualenv here
venv = ".venv"
